--- a/client/package.json
+++ b/client/package.json
@@ -9,37 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/button": "2.0.26",
-    "@nextui-org/code": "2.0.24",
-    "@nextui-org/input": "2.1.16",
-    "@nextui-org/kbd": "2.0.25",
-    "@nextui-org/link": "2.0.26",
-    "@nextui-org/navbar": "2.0.27",
-    "@nextui-org/react": "^2.2.9",
-    "@nextui-org/snippet": "2.0.30",
-    "@nextui-org/switch": "2.0.25",
-    "@nextui-org/system": "2.0.15",
-    "@nextui-org/theme": "2.1.17",
-    "@react-aria/ssr": "^3.8.0",
-    "@react-aria/visually-hidden": "^3.8.6",
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.16",
-    "clsx": "^2.0.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "14.0.2",
-    "framer-motion": "^10.18.0",
-    "intl-messageformat": "^10.5.0",
-    "next": "14.0.2",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^5.0.1",
-    "react-spinners": "^0.13.8",
-    "tailwind-variants": "^0.1.18",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.0.4"
+    "@nextui-org/button": "^2.0.26",
+    "@nextui-org/code": "^2.0.24",
+    "@nextui-org/input": "^2.1.17",
+    "@nextui-org/kbd": "^2.0.25",
+    "@nextui-org/link": "^2.0.26",
+    "@nextui-org/navbar": "^2.0.27",
+    "@nextui-org/react": "^2.3.0",
+    "@nextui-org/snippet": "^2.0.30",
+    "@nextui-org/switch": "^2.0.25",
+    "@nextui-org/theme": "^2.1.18",
+    "@react-aria/ssr": "^3.9.0",
+    "@react-aria/table": "^3.15.0",
+    "@react-aria/utils": "^3.25.0",
+    "@react-aria/visually-hidden": "^3.8.14",
+    "@types/node": "^20.5.8",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.22",
+    "autoprefixer": "^10.4.16",
+    "clsx": "^2.0.1",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^14.0.3",
+    "framer-motion": "^10.17.0",
+    "intl-messageformat": "^10.5.14",
+    "next": "^14.0.4",
+    "next-themes": "^0.3.0",
+    "postcss": "^8.4.31",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
+    "react-spinners": "^0.14.1",
+    "tailwind-variants": "^0.1.19",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.1.0"
   }
 }
