--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/community": "^0.2.20",
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "langchain": "^0.2.11",
+    "mongodb": "^6.8.0",
     "next": "^14.2.5",
     "nodemon": "^3.1.4"
   }
